Login form added to project ( html and css )

--- a/onclick/index.html
+++ b/onclick/index.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     
+    <div class="form-section">
+        <form action="#">
+            <h1 class="title">Login Form</h1>
+
+            <div>
+                <input type="text" class="input" placeholder="Username" />
+                <p>Please fill the input</p>
+            </div>
+
+            <div>
+                <input type="password" class="input" placeholder="Password" />
+                <p>Please fill the input</p>
+            </div>
+
+            <input type="submit" class="submit-button" value="Submit" />
+        </form>
+    </div>
+
     
     <script src="./script.js"></script>
 </body>
