--- a/onclick/index.html
+++ b/onclick/index.html
@@ -7,19 +7,19 @@
     <title>Login form validation (onclick)</title>
 </head>
 <body>
-    
+
     <div class="form-section">
         <form action="#">
             <h1 class="title">Login Form</h1>
 
             <div>
-                <input type="text" class="input" placeholder="Username" />
-                <p>Please fill the input</p>
+                <input id="username-input" type="text" class="input" placeholder="Username" />
+                <p id="username-text">Please fill the input</p>
             </div>
 
             <div>
-                <input type="password" class="input" placeholder="Password" />
-                <p>Please fill the input</p>
+                <input id="password-input" type="password" class="input" placeholder="Password" />
+                <p id="password-text">Please fill the input</p>
             </div>
 
             <input type="submit" class="submit-button" value="Submit" />
