--- a/keyboard/index.html
+++ b/keyboard/index.html
@@ -7,7 +7,7 @@
     <title>Login form validation (keyboard)</title>
 </head>
 <body>
-    
+
     <div class="form-section">
         <form action="#">
             <h1 class="title">Login Form</h1>
@@ -22,7 +22,7 @@
                 <p id="password-text">Please fill the input</p>
             </div>
 
-            <input type="submit" class="submit-button" value="Submit" />
+            <input disabled type="submit" class="submit-button" value="Submit" />
         </form>
     </div>
     
