--- a/blur/index.html
+++ b/blur/index.html
@@ -7,6 +7,24 @@
     <title>Login form validation (blur)</title>
 </head>
 <body>
+
+    <div class="form-section">
+        <form action="#">
+            <h1 class="title">Login Form</h1>
+
+            <div>
+                <input id="username-input" type="text" class="input" placeholder="Username" />
+                <p id="username-text">Please fill the input</p>
+            </div>
+
+            <div>
+                <input id="password-input" type="password" class="input" placeholder="Password" />
+                <p id="password-text">Please fill the input</p>
+            </div>
+
+            <input disabled type="submit" class="submit-button" value="Submit" />
+        </form>
+    </div>
     
     <script src="./script.js"></script>
 </body>
